增加管线、设备、待办、物联网等几个模块扩展& 增加以上相关模块多语言支持

--- a/odoo_dtu/i18n/zh_CN.po
+++ b/odoo_dtu/i18n/zh_CN.po
@@ -160,3 +160,9 @@ msgstr "GSM纬度"
 #: model:ir.model.fields,field_description:odoo_dtu.field_dtu_data__Company
 msgid "Company"
 msgstr "公司"
+
+#. module: odoo_dtu
+#: model:ir.ui.menu,name:odoo_dtu.iot_root_menu
+msgid "IoT"
+msgstr "物联网(IoT)"
+
